// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageList computed usecase-0__ animationRatio 1`] = `0`;

exports[`ImageList computed usecase-0__ buttons 1`] = `
Array [
  Object {
    "borderSpacing": 5,
    "isHovered": false,
    "size": 60,
  },
]
`;

exports[`ImageList computed usecase-0__ buttonsData 1`] = `
Array [
  Object {},
]
`;

exports[`ImageList computed usecase-0__ buttonsWidth 1`] = `61`;

exports[`ImageList computed usecase-0__ computedImages 1`] = `
Array [
  Object {
    "borderSpacing": 5,
    "hasWarning": undefined,
    "isCurrent": false,
    "isHovered": false,
    "loadingProgress": null,
    "offsetX": 0,
    "opacity": 0.8,
    "size": 60,
    "url": null,
  },
  Object {
    "borderSpacing": 5,
    "hasWarning": undefined,
    "isCurrent": false,
    "isHovered": false,
    "loadingProgress": null,
    "offsetX": 61,
    "opacity": 0.8,
    "size": 60,
    "url": null,
  },
  Object {
    "borderSpacing": 5,
    "hasWarning": undefined,
    "isCurrent": false,
    "isHovered": false,
    "loadingProgress": null,
    "offsetX": 122,
    "opacity": 0.8,
    "size": 60,
    "url": null,
  },
]
`;

exports[`ImageList computed usecase-0__ count 1`] = `2`;

exports[`ImageList computed usecase-0__ displayWidths 1`] = `
Array [
  60,
  60,
  60,
]
`;

exports[`ImageList computed usecase-0__ fullHeight 1`] = `67`;

exports[`ImageList computed usecase-0__ hasArrows 1`] = `
Object {
  "left": false,
  "right": false,
}
`;

exports[`ImageList computed usecase-0__ hoverIndex 1`] = `null`;

exports[`ImageList computed usecase-0__ imagesWidth 1`] = `121`;

exports[`ImageList computed usecase-0__ maxVisible 1`] = `7`;

exports[`ImageList computed usecase-0__ movingDirection 1`] = `null`;

exports[`ImageList computed usecase-0__ numVisible 1`] = `2`;

exports[`ImageList computed usecase-0__ targetWidth 1`] = `182`;

exports[`ImageList computed usecase-0__ targetWidths 1`] = `
Array [
  60,
  60,
  60,
]
`;

exports[`ImageList computed usecase-0__ targetXOffset 1`] = `0`;

exports[`ImageList computed usecase-0__ visibleWidths 1`] = `
Array [
  60,
  60,
  60,
]
`;
